# rl_crossroad

./: .env.example  .gitignore  Dockerfile  README.md  ros_entrypoint.sh
jackal_crossroad_env/: requirements-sac.txt  setup.py
jackal_crossroad_env/config/: sac_config.yaml
jackal_crossroad_env/scripts/: feature_extractor.py  train_geometric_agent.py  train_main.py  train_random_agent.py  train_sac_agent.py  video_recorder.py  visualize_collision.py  visualize_metrics.py
jackal_crossroad_env/src/jackal_crossroad_env/: __init__.py  crossroad_task_env.py  integration_example.py  jackal_robot_env.py  preprocessing.py
jackal_crossroad_env/src/jackal_crossroad_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jackal_robot/: CMakeLists.txt  package.xml
jackal_robot/cfg/: GazeboTrafficLight.cfg
jackal_robot/launch/: crossroad.launch
jackal_robot/models/gazebo_traffic_light/: model.sdf
jackal_robot/src/: GazeboTrafficLight.cpp  GazeboTrafficLight.hpp
jackal_robot/worlds/: crossroad.world
jackal_robot/yaml/: light_sequence.yaml
