<?xml version="1.0"?>
<package format="2">
  <name>jackal_robot</name>
  <version>0.0.0</version>
  <description>Jackal custom worlds and launch files</description>
  <maintainer email="arina@gmail.com">Arina Iusupova</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>gazebo_ros</depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>jackal_gazebo</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models/" />
    <gazebo plugin_path="${prefix}/lib" />
  </export>
</package>
